fixed bug where dropdown box in smaller viewports were behind elements

--- a/custom.less
+++ b/custom.less
@@ -233,8 +233,6 @@ img.img-circle:hover {
 	}
 }
 
-
-
 .splash {
 	margin: 0 auto;
 	position: absolute;
@@ -243,4 +241,6 @@ img.img-circle:hover {
 	transform: translate(-50%,-50%);
 }
 
-
+.col-md-2 {
+	z-index:1;
+}
